# blobcache

./: .gitignore  Dockerfile  Makefile  README.md  go.mod  go.sum  pyproject.toml
blobcache/: __init__.py  blobcache.py
cmd/: main.go
deploy/charts/blobcache/: Chart.yaml  values.yaml
hack/: deployment.yaml  okteto.yaml
pkg/: config.go  node.go  server.go  storage.go
proto/: gen.sh
